syntax = "proto3";

package intento.intent.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "intento/intent/v1beta1/flow.proto";
import "intento/intent/v1beta1/trustless_execution_agent.proto";
import "intento/intent/v1beta1/params.proto";
option go_package = "github.com/trstlabs/intento/x/intent/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

// Query defines the gRPC querier service.
service Query {
  // QueryInterchainAccountFromAddress returns the interchain account for given
  // owner address on a given connection pair
  rpc InterchainAccountFromAddress(QueryInterchainAccountFromAddressRequest)
      returns (QueryInterchainAccountFromAddressResponse) {
    option (google.api.http).get = "/intento/intent/v1beta1/address-to-ica";
  }
  // Flow returns the auto-executing interchain account tx
  rpc Flow(QueryFlowRequest) returns (QueryFlowResponse) {
    option (google.api.http).get = "/intento/intent/v1beta1/flow/{id}";
  }
  // FlowHistory returns the flow history
  rpc FlowHistory(QueryFlowHistoryRequest)
      returns (QueryFlowHistoryResponse) {
    option (google.api.http).get =
        "/intento/intent/v1beta1/flow-history/{id}";
  }
  // Flows returns the all flows
  rpc Flows(QueryFlowsRequest) returns (QueryFlowsResponse) {
    option (google.api.http).get = "/intento/intent/v1beta1/flows";
  }
  // FlowsForOwner returns all flows for a given owner
  rpc FlowsForOwner(QueryFlowsForOwnerRequest)
      returns (QueryFlowsForOwnerResponse) {
    option (google.api.http).get =
        "/intento/intent/v1beta1/flows/{owner}";
  }

  // TrustlessExecutionAgent returns the trustless excution agent information for a given hosted address
  rpc TrustlessExecutionAgent(QueryTrustlessExecutionAgentRequest)
      returns (QueryTrustlessExecutionAgentResponse) {
    option (google.api.http).get =
        "/intento/intent/v1beta1/trustless-execution-agent/{agent_address}";
  }

  // TrustlessExecutionAgents returns all trustless excution agents
  rpc TrustlessExecutionAgents(QueryTrustlessExecutionAgentsRequest)
      returns (QueryTrustlessExecutionAgentsResponse) {
    option (google.api.http).get = "/intento/intent/v1beta1/trustless-execution-agents";
  }

  // TrustlessExecutionAgentsByFeeAdmin returns all trustless excution agents for a given fee admin address
  rpc TrustlessExecutionAgentsByFeeAdmin(QueryTrustlessExecutionAgentsByFeeAdminRequest)
      returns (QueryTrustlessExecutionAgentsByFeeAdminResponse) {
    option (google.api.http).get =
        "/intento/intent/v1beta1/trustless-execution-agents/{fee_admin}";
  }

  // Params returns the total set of Intent parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/intento/intent/v1beta1/params";
  }
}

// QueryInterchainAccountFromAddressRequest is the request type for the
// Query/InterchainAccountAddress RPC
message QueryInterchainAccountFromAddressRequest {
  string owner = 1;
  string connection_id = 2;
}

// QueryInterchainAccountFromAddressResponse the response type for the
// Query/InterchainAccountAddress RPC
message QueryInterchainAccountFromAddressResponse {
  string interchain_account_address = 1
      [ (gogoproto.moretags) = "yaml:\"interchain_account_address\"" ];
}

// QueryFlowRequest is the request type for the Query/FlowRequest RPC
message QueryFlowRequest { string id = 1; }

// QueryFlowResponse the response type for the Query/FlowRequest RPC
message QueryFlowResponse {
  FlowInfo flow_info = 1 [ (gogoproto.nullable) = false ];
}

// QueryFlowHistoryRequest is the request type for the
// Query/QueryFlowHistoryRequest RPC
message QueryFlowHistoryRequest {
  // id of the flow
  string id = 1;
  // Pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryFlowHistoryResponse the response type for the
// Query/QueryFlowHistoryResponse RPC
message QueryFlowHistoryResponse {
  repeated FlowHistoryEntry history = 1 [ (gogoproto.nullable) = false ];
  // Pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryFlowsRequest is the request type for the Query/FlowsRequest RPC
message QueryFlowsRequest {
  // Pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryFlowsResponse the response type for the Query/FlowsRequest RPCÏ€
message QueryFlowsResponse {
  repeated FlowInfo flow_infos = 1 [ (gogoproto.nullable) = false ];
  // Pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryFlowsForOwnerRequest is the request type for the
// Query/FlowsForOwnerRequest RPC
message QueryFlowsForOwnerRequest {
  string owner = 1;
  // Pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryFlowsForOwnerResponse the response type for the
// Query/FlowsForOwnerRequest RPC
message QueryFlowsForOwnerResponse {
  repeated FlowInfo flow_infos = 1 [ (gogoproto.nullable) = false ];
  // Pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryTrustlessExecutionAgent is the request type for the Query/Params RPC method.
message QueryTrustlessExecutionAgentRequest { string agent_address = 1; }

// QueryTrustlessExecutionAgentResponse is the response type for the Query/TrustlessExecutionAgent
// RPC method.
message QueryTrustlessExecutionAgentResponse {
  // TrustlessExecutionAgent
  TrustlessExecutionAgent trustless_execution_agent = 1 [ (gogoproto.nullable) = false ];
}

// QueryTrustlessExecutionAgents is the request type for the Query/TrustlessExecutionAgent RPC
// method.
message QueryTrustlessExecutionAgentsRequest {
  // Pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryTrustlessExecutionAgentsResponse is the response type for the Query/TrustlessExecutionAgent
// RPC method.
message QueryTrustlessExecutionAgentsResponse {
  // TrustlessExecutionAgents
  repeated TrustlessExecutionAgent trustless_execution_agents = 1 [ (gogoproto.nullable) = false ];
  // Pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryTrustlessExecutionAgentsByFeeAdminRequest
message QueryTrustlessExecutionAgentsByFeeAdminRequest {
  string fee_admin = 1;
  // Pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryTrustlessExecutionAgentResponse is the response type for the Query/TrustlessExecutionAgent
// RPC method.
message QueryTrustlessExecutionAgentsByFeeAdminResponse {
  // TrustlessExecutionAgents
  repeated TrustlessExecutionAgent trustless_execution_agents = 1 [ (gogoproto.nullable) = false ];
  // Pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}